--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
         "test": "__tests__"
     },
     "scripts": {
-        "build": "rm -rf ./dist/* && ncc build src/main.ts --minify",
+        "build": "rm -rf ./dist/* && NODE_OPTIONS=--openssl-legacy-provider ncc build src/main.ts --minify",
         "format": "prettier --write 'src/**/*.ts' '__tests__/**/*.ts'",
         "lint": "tsc --noEmit && eslint 'src/**/*.ts' '__tests__/**/*.ts'",
         "watch": "rm -rf ./dist/* && ncc build src/main.ts --watch",
